<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/one"
    tools:context=".Registr">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:background="@drawable/back_sighin"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="78dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/barash"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moods_from_smeshariki"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/login"
            android:textStyle="bold"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:textStyle="bold"
            android:textColorHint="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sign_in"
            android:onClick="onQui"
            android:background="@drawable/button"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAllCaps="false"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>